tests/snapshots/integration__env__env_default_expand.snap
---
source: tests/env.rs
assertion_line: 35
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
TEST_EXA=/home/me/.local/state/app
TEST_EXB=/home/me/app
TEST_EXC=/home/me/x
TEST_EXD=/tail
TEST_EXE=plain


# BUILD_OUTPUT
TEST_EXA=/home/me/.local/state/app
TEST_EXB=/home/me/app
TEST_EXC=/home/me/x
TEST_EXD=/tail
TEST_EXE=plain
